--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="main">
-        <div class="main-wrapper pl">
+        <div class="main1 main-wrapper pl">
             <div class="inner-wrapper">
                 <div class="first-text">Award Winning</div>
                 <div class="first-heading">Digital Marketing Agency</div>
@@ -60,8 +60,8 @@
         </div>
 
         <div class="main2">
-            <div class="flexx main2-in">
-                <div class="pl">
+            <div class="">
+                <div class="pl flexx main2-in">
                     <div class="upcon pl-35">
                         <span>WHAT WE DO</span>
                     </div>
@@ -252,7 +252,7 @@
 
 
         <div class="main3">
-            <div id="margins">
+            <div id="margins mainn3">
                 <div class="whychoose">WHY CHOOSE US</div>
                 <div class="whywe">Why We Are Best</div>
                 <div class="pl">
@@ -310,7 +310,7 @@
 
         <div class="main4">
             <div id="margins">
-                <div>
+                <div class="flexx" style="flex-direction: column;">
                     <div class="upcont">
                         <span>Our project</span>
                     </div>
@@ -423,8 +423,9 @@
 
 
 
-        <div class="main6 flexx">
+        <div class="main6">
             <div id="margins">
+                <div class="flexx main6in">
                 <div class="uptext6">
                     <span>client's feedback</span>
                 </div>
@@ -435,10 +436,11 @@
                     <span>Jannat Tumpa The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for
                         those
                         interested. Sections Bonorum et Malorum original.</span>
+                        <div class="foottext6">
+                            <span class="first-prt">JANNAT TUMPA</span><span class="second-prt"> - COO, AMERIMAR ENTERPRISES,
+                                INC.</span>
+                        </div>
                 </div>
-                <div class="foottext6">
-                    <span class="first-prt">JANNAT TUMPA</span><span class="second-prt"> - COO, AMERIMAR ENTERPRISES,
-                        INC.</span>
                 </div>
             </div>
         </div>
@@ -446,7 +448,7 @@
 
 
         <div class="main7 flexx">
-            <div class="imgcontain">
+            <div class="imgcontain flexx">
                 <img src="./assets/Group 500@2x.png" alt="">
             </div>
         </div>
